# lnp-hsc-atlas

./: .env.template  .gitignore  CONTRIBUTING.md  LICENSE  Makefile  README.md  explorer.jsx  pyproject.toml  requirements.txt
.github/workflows/: deploy-explorer.yml
annotations/: README.md  bhatt_2025.json  breda_2023.json  cheng_2020.json  cheng_cullis_2025.json  da_silva_sanchez_2022.json  gentry_2025.json  kim_2024.json  kim_2024_experiments.json  lian_2024.json  loughrey_2025.json  newby_2021.json  palanki_2024.json  paper_annotations.json  patel_2024.json  radmand_2023.json  radmand_2024.json  sago_2018.json  shi_2023.json  su_2024.json  tessera_asgct2025_press.json  tessera_ash2024_blood.json  tessera_ash2025_blood.json  tessera_ash2025_press.json  tessera_esgct2024_press.json
data/: README.md
data/audit/: AUDIT_REPORT.md  AUDIT_RESOLUTION.md  confirmation_bias.py  dose_response_sensitivity.py  gp_validation.py  headgroup_stats.py  kim_ratio_check.py  pareto_verification.py  shi_liver_check.py  trace_numbers.py
data/extractions/: 36988645.json  37499029.json  39578569.json
data/features/: hsc_features.csv  hsc_features.parquet
data/hsc/: hsc_curated.parquet
data/kim_screen/: kim_2024_screen_corrected.json
data/models/: bayesian_opt_results.json  cross_platform_comparison.json  cv_results.json  cv_results_with_il_descriptors.json  cv_results_with_lian.json  gap_scores.json  gap_scores_135.json  gp_classifier_135.pkl  gp_loo_results_135.json  headgroup_tropism.json  learning_curve.parquet  lgbm_model.pkl  lopocv_results.json  pareto_frontier.json  pareto_narrative.json  pareto_screen_only.json  pareto_validation_only.json  recommendations.parquet  recommendations_classification.parquet  recommendations_regression.parquet  sar_validation.json  shap_values.parquet  therapeutic_window.json  therapeutic_window_new_entries.json  transfer_learning_results.json  transfer_results.json  umap_coordinates.json  validation_layers.json
data/unified/: training_data.parquet
docs/: annotation_template.json  architecture_diagram.mermaid  er_diagram.mermaid
explorer/: index.html  package-lock.json  package.json  vite.config.js
explorer/src/: App.jsx  main.jsx
scripts/: build_feature_matrix.py  extract_explorer_data.py  generate_figures.py  patch_explorer.py  train_model.py  validate_annotations.py
src/lnp_optimizer/: __init__.py  bayesian_opt.py  evaluation.py  feature_matrix.py  features.py  ingest_new_papers.py  integrate_lian.py  models.py  pareto.py  pareto_corrected.py  recommender.py  retrain_with_lian.py  therapeutic_window.py  transfer.py  tw_pipeline.py  tw_report.py  validation.py
src/shared/: __init__.py  config.py  db.py  llm_client.py
tests/: conftest.py  test_agile_ingest.py  test_bayesian_opt.py  test_evaluator.py  test_extractor.py  test_features.py  test_harmonize.py  test_hsc_dataset.py  test_lance_ingest.py  test_lnpdb_ingest.py  test_models.py  test_pareto.py  test_therapeutic_window.py  test_transfer.py  test_validation.py
tests/fixtures/: sample_extraction.json
tests/pubmed_agent/: test_client.py  test_preprocessor.py
tests/shared/: test_config.py  test_db.py  (+2 more)
(+9 files in other folders)
