[project]
name = "lnp-research-platform"
version = "0.1.0"
description = "PubMed research agent and LNP formulation optimization platform for gene therapy"
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    # --- Core ---
    "pydantic>=2.0",
    "python-dotenv>=1.0",
    "httpx>=0.27",           # Async HTTP client (PubMed API, Claude API)
    "tenacity>=8.0",         # Retry logic for API calls
    # --- Database ---
    "sqlalchemy[asyncio]>=2.0",
    "alembic>=1.13",         # DB migrations
    "aiosqlite>=0.20",       # Async SQLite driver
    # --- LLM ---
    "anthropic>=0.40",       # Claude API SDK
    # --- Data & ML ---
    "pandas>=2.2",
    "numpy>=1.26",
    "scikit-learn>=1.5",
    "xgboost>=2.0",
    "lightgbm>=4.0",
    "shap>=0.45",            # Model interpretability
    "umap-learn>=0.5.6",     # Dimensionality reduction for EDA
    "numba>=0.59",            # Pin for Python 3.12 compat (umap dep)
    # --- Chemistry ---
    "rdkit>=2025.3",         # Molecular descriptors from SMILES
    # --- Visualization & Dashboard ---
    "streamlit>=1.38",
    "plotly>=5.22",
    # --- API (for productization) ---
    "fastapi>=0.115",
    "uvicorn>=0.30",
    # --- Paper processing ---
    "lxml>=5.0",             # PMC XML parsing
    "beautifulsoup4>=4.12",  # HTML/XML parsing fallback
    # --- CLI output ---
    "rich>=13.0",            # Terminal tables and formatting
    "kaleido>=1.2.0",
    "python-docx>=1.2.0",
    "matplotlib>=3.10.8",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "ruff>=0.7",
    "mypy>=1.11",
    "types-beautifulsoup4",
    "respx>=0.21",           # Mock httpx for testing
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pubmed_agent", "src/lnp_optimizer", "src/shared", "src/dashboard", "src/external_data"]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests"]
extend-exclude = ["alembic/versions"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
]

[tool.mypy]
python_version = "3.12"
mypy_path = "src"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true
disable_error_code = ["import-untyped"]

# Relax for third-party libs without stubs
[[tool.mypy.overrides]]
module = [
    "rdkit.*",
    "shap.*",
    "xgboost.*",
    "lightgbm.*",
    "umap.*",
    "streamlit.*",
    "plotly.*",
    "pandas",
    "pandas.*",
]
ignore_missing_imports = true
follow_imports = "silent"

[tool.uv]
environments = [
    "sys_platform == 'darwin'",
    "sys_platform == 'linux'",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "integration: marks tests as integration tests (deselect with '-m not integration')",
]
